--- a/_posts/2019-08-15-MoGA.md
+++ b/_posts/2019-08-15-MoGA.md
@@ -1,6 +1,8 @@
 ---
 title: MoGA Searching Beyond MobileNetV3
 date: 2019-08-15
+categories:
+- paper-reading
 permalink: /posts/2019/08/15/MoGA/
 tags:
 - neural architecture searching
