--- a/_posts/2019-08-22-paper_vqa.md
+++ b/_posts/2019-08-22-paper_vqa.md
@@ -3,6 +3,7 @@ title: VQA Visual Question Answering
 date: 2019-08-22
 categories:
 - paper-reading
+permalink: /posts/2019/08/22/paper_vqa/
 tags:
 - VQA
 - ICCV
