updatE: add projects

--- a/_posts/2020-03-12-arbicon.md
+++ b/_posts/2020-03-12-arbicon.md
@@ -5,10 +5,9 @@ categories:
 - paper-reading
 tags:
 - NIPS
-- image registration
 ---
 
-estimate geometric transforns between iamge pairs
+estimate geometric transforms between iamge pairs
 - method
     - shared CNN -> feature map for each input
     - 4D coorelation tensor: using cosine similarity
