--- a/_posts/2020-03-12-arbicon.md
+++ b/_posts/2020-03-12-arbicon.md
@@ -3,6 +3,7 @@ title: Arbicon-Net Arbitrary Continuous Geometric Transformation Networks for Im
 date: 2020-03-12
 categories:
 - paper-reading
+permalink: /posts/2020/03/12/paper_arbicon/
 tags:
 - NIPS
 ---
