update: formatting till 2019 dec

--- a/_posts/2019-12-02-paper_151106343.md
+++ b/_posts/2019-12-02-paper_151106343.md
@@ -3,6 +3,7 @@ title: ONLINE BATCH SELECTION FOR FASTER TRAINING OF NEURAL NETWORKS
 date: 2019-12-02
 categories:
 - paper-reading
+permalink: /posts/2019/12/02/paper_151106343/
 tags:
 - ICLR
 ---
