--- a/_posts/2020-10-30-paper_UDF.md
+++ b/_posts/2020-10-30-paper_UDF.md
@@ -7,7 +7,7 @@ categories:
 tags:
   - NIPS
   - 3D reconstruction
-  - neural impliclt field
+  - neural implicit field
 ---
 
 from signed distance field to un-signed DF
