--- a/_posts/2021-03-11-paper_nex.md
+++ b/_posts/2021-03-11-paper_nex.md
@@ -1,7 +1,7 @@
 ---
-title: NeX Real-time View Synthesis with Neural Basis Expansion
-date: 2021-03-11
-permalink: /posts/2021/03/11/paper_nex/
+title: Mixture of Volumetric Primitives for Efficient Neural Rendering
+date: 2021-03-12
+permalink: /posts/2021/03/12/paper_mvp/
 categories:
 - paper-reading
 tags:
@@ -9,9 +9,8 @@ tags:
   - neural rendering
 ---
 
-nerf in a mpi
-- xyz -> opacity and a base color, and a several *reflectance related* color
-- theta, phi -> reflectance coef
-- 192 planes: same number of sample as the fine stage of NeRF
-- a new dataset full of reflection: Shiny
-- L2 loss on image and L1 loss on Laplacan
+tons of small boxes around the surface
+- kind of like mesh, but build a small nerf for each vertex: combination of volumetric and primitie-based approaches
+  - volumetric primitive: center, rotation, scale, and a dense voxel grid
+- decoder: latent code -- conv --> set of primitives
+- windowing function: a weight of distance from the primitive origin: moving the primitive instead of learning the payload
